# flagging

./: .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Pipfile  Procfile  README.md  alembic.ini  app.json  docker-compose.yml  gunicorn_conf.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run  run_heroku.py  run_unix_dev.sh  run_windows_dev.bat  server.cnf  setup.py  sitemap.xml  text.txt
.github/workflows/: deploy.yml  docs.yml  main.yaml  mkdocs.yml  py.yaml  tests.yaml  tests.yml
about/: index.html
admin/: index.html
alembic/: env.py  seeds.py
alembic/versions/: 39a4e575f68c_.py  793fab3b5438_.py  c72d155bfcac_.py  e433f34dd4bd_.py  rev001.py  rev002.py  rev003.py  rev004.py  rev005.py
app/: README.md  __init__.py  config.py  mail.py  main.py  twitter.py
app/admin/: auth.py  base.py  main.py
app/blueprints/: README.md  api.py  api_v1.py  frontend.py
app/data/: README.md  __init__.py  celery.py  database.py  globals.py
app/static/: dataframe.css  flags.css  style.css
app/templates/: _base.html  _flag_widget_v01.html  _flag_widget_v02.html  _nav.html  about.html  boathouses.html  flags.html  index.html  model_outputs.html
cloud/: index.html
cloud/heroku_deployment/: index.html
cloud/manual_heroku_deployment/: index.html
cloud/twitter_bot/: index.html
development/: index.html
development/data/: index.html
development/frontend/: index.html
development/predictive_models/: index.html
development_resources/: index.html
development_resources/learning_resources/: index.html
development_resources/shell/: index.html
docs/: README.md  deployment.md  mkdocs.yml  requirements.txt
docs/docs/: about.md  admin.md  background.md  database.md  deployment.md  export.md  index.md  setup.md  shell.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/src/: about.md  admin.md  index.md  setup.md
export/: index.html
flagging_site/: README.md  __init__.py  admin.py  app.py  auth.py  cert.pem  config.py  key.pem  keys.json  mail.py  twitter.py  twitter_bot.py  vault.7z
flagging_site/blueprints/: README.md  __init__.py  api.py  boathouses_api.yml  cyanobacteria.py  flagging.py  model_input_data_api.yml  predictive_model_api.yml  reach_api.yml  reachapi.yml
flagging_site/data/: README.md  __init__.py  boathouses.py  core.py  cyano_overrides.py  database.py  db_creds_dummy.json  db_tester.py  hobolink.py  keys.py  live_website_options.py  manual_overrides.py  model.py  predictive_models.py  schema.sql  task_queue.py  usgs.py
flagging_site/static/: README.md  dataframe.css  flags.css  style.css
flagging_site/templates/: README.md  _base.html  _flag_widget.html  _flag_widget_v01.html  _flag_widget_v02.html  _nav.html  about.html  base.html  boathouses.html  error.html  flags.html  index.html  model_outputs.html  (+1 more)
requirements/: _core.in  _dev_core.in  _docs.txt  dev_osx.in  dev_osx.txt  dev_windows.in  dev_windows.txt  prod.in  prod.txt
setup/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_data.py  test_site.py
(+118 files in other folders)
