[project]
name = "flagging"
version = "0.1.0"
description = "App for Charles River Watershed Assocaition's Flagging Program"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "alembic>=1.13.3",
    "celery>=5.4.0",
    "click>=8.1.7",
    "flasgger>=0.9.7.1",
    "flask>=3.0.3",
    "flask-admin>=1.6.1",
    "flask-basicauth>=0.2.0",
    "flask-caching>=2.3.0",
    "flask-cors>=5.0.0",
    "flask-db>=0.4.1",
    "flask-mail>=0.10.0",
    "flask-postgres>=0.2.5",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "ruff>=0.7.1",
    "flower>=2.0.1",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "pandas>=2.2.3",
    "psycopg>=3.2.3",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "rich-click>=1.8.3",
    "sqlalchemy>=2.0.36",
    "sentry-sdk[flask]>=2.17.0",
    "tenacity>=9.0.0",
    "tweepy>=4.14.0",
    "pytest>=8.3.3",
    "pytest-celery>=1.1.3",
    "pytest-cov>=5.0.0",
    "pytest-postgresql<4.0.0",
    "schemathesis>=3.38.2",
    "pre-commit>=4.0.1",
    "gunicorn>=23.0.0",
    "inotify>=0.2.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
