[project]
name = "flagging"
version = "0.1.0"
description = "App for Charles River Watershed Assocaition's Flagging Program"
readme = "README.md"
requires-python = "~=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
