[project]
name = "flagging"
version = "0.1.0"
description = "App for Charles River Watershed Assocaition's Flagging Program"
readme = "README.md"
requires-python = "~=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true

[tool.pytest.ini_options]
env = [
    "USE_MOCK_DATA=true",
    "TESTING=true",
    "FLASK_DEBUG=true",
    "POSTGRES_DB=flagging_pytest",
    "SEND_TWEETS=true",
    "BASIC_AUTH_USERNAME=admin",
    "BASIC_AUTH_PASSWORD=password"
]
addopts = "--cov=app"
testpaths = ["tests"]
markers = [
    "auth_required: Tests that require valid authorization to HOBOlink in environment variables.",
    "check_grammar: Test the grammar of the website. Involves pinging languagetool.org's public API. Use sparingly, as a courtesy to them for hosting the public API."
]
filterwarnings = [
    # https://github.com/jeancochrane/pytest-flask-sqlalchemy/issues/36
    "ignore:^Reset agent is not active.*$:RuntimeWarning",
    # Flask-Admin is running into deprecation warnings
    "ignore:^.*Jinja 3\\.1.*$:DeprecationWarning",
    "ignore:^.*Flask 2\\.1.*$:DeprecationWarning",
    "ignore:^.*A private pytest class or function was used\\..*$:DeprecationWarning"
]
